Fixed scrollbar disapearing on modal, and added width+height adjustment for embed, along with fixing error in position of controls of embed

--- a/static/css/embed.css
+++ b/static/css/embed.css
@@ -148,7 +148,7 @@
     background-color:grey;
     width:50vw;
     color:white;
-    margin-top:0px;
+    margin-top:-6px;
 }
 
 #playpause, #duration, #volume-button
