--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,29 @@
 
 .snow{-webkit-filter:brightness(100%);-moz-filter:brightness(100%);-o-filter:brightness(100%);filter:brightness(100%);width:5px; height:5px; background-color:white;z-index:1000000;pointer-events:none;position:absolute;border:1px solid white;border-radius:100px;}
 
+.settings_embed{
+  width:40px !important;
+  padding:0 10px !important;
+  border:none !important;
+}
+
+.settings_embed:focus{
+  border:none !important;
+  box-shadow: none !important;
+}
+
+.padding_right_26 {
+  padding-right: 26px !important;
+}
+
+.padding_left_6{
+  padding-left: 6px !important;
+}
+
+.embed-label{
+  font-size:1rem !important;
+}
+
 #embed-button{
   display:none;
 }
@@ -209,6 +232,7 @@ body {
     -ms-transition:background-color 1s;
     -o-transition:background-color 1s;
     transition:background-color 1s;
+    overflow-y:scroll !important;
 }
 
 .main, #main-row, .video-container, #playlist{
